# oscillo-plasma-calc

./: .gitignore  README.md  pyproject.toml
docs/: IMPLEMENTATION.md  advanced_theory_and_trace_ux_plan.md  formula_selection_rationale.md  math_rendering_fix.md  publish_and_render_plan.md  theory_reference.md  ui_redesign_explanation.md  ux_redesign_researcher_plan.md
scripts/: convert_xlsx_to_csv.py  launch_ui.bat  launch_ui.sh  run_analysis.py  run_excitation_temp.py
src/oscillo_plasma_calc/: __init__.py  pipeline.py
src/oscillo_plasma_calc/chemistry/: __init__.py  efficiency.py  g_value.py  oil_synthesis.py  selectivity.py
src/oscillo_plasma_calc/config/: constants.py  defaults.yaml
src/oscillo_plasma_calc/docs/: __init__.py  explanations.py  typical_ranges.py
src/oscillo_plasma_calc/electrical/: __init__.py  advanced.py  energy_integral.py  impedance.py  instant_power.py  lissajous.py  rms.py
src/oscillo_plasma_calc/io_layer/: __init__.py  csv_loader.py  schema.py  xlsx_loader.py
src/oscillo_plasma_calc/plasma/: __init__.py  boltzmann.py  debye.py  nonequilibrium.py  ohmic.py  paschen.py  stark.py
src/oscillo_plasma_calc/qa/: __init__.py  anomaly.py  csv_validator.py  operational.py
src/oscillo_plasma_calc/report/: markdown.py  trace.py  ui_format.py
src/oscillo_plasma_calc/signal/: __init__.py  fft.py  filtering.py  peaks.py  preprocess.py
tests/: test_advanced_electrical.py  test_electrical.py  test_io.py  test_nonequilibrium.py  test_oil_synthesis.py  test_operational.py  test_plasma.py  test_spectroscopy.py
(+7 files in other folders)
